# pricing_kit

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  basic_adjustment.rs
src/: lib.rs  model.rs
src/model/: adjustment.rs  currency.rs  error.rs  markup.rs  mod.rs  pricing.rs
src/rule_engine/: context.rs  dsl.rs  evaluator.rs  mod.rs  rule.rs
tests/: adjustment_test.rs  dsl_test.rs  pricing_test.rs
