[package]
name = "pricing_kit"
version = "0.1.4"
edition = "2024"
authors = ["Jerry Maheswara  <jerrymaheswara@gmail.com>"]
description = "A flexible, lightweight Rust library for pricing strategies, including calculating and managing prices, markup, commissions, and multi-currency support."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/pricing_kit"
documentation = "https://docs.rs/pricing_kit"
readme = "README.md"
keywords = ["pricing", "markup", "kit", "currency", "commission"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
thiserror = "2.0.12"